[package]
name = "mi-sh"
version = "0.1.0"
edition = "2021"

[dependencies]
markup = "0.12.5"
rust-embed="6.3.0"
axum = "0.5.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
comrak = "0.12.1"