[package]
name = "mi-sh"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rust-embed="6.3.0"
axum = "0.5.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
comrak = "0.12.1"
rust-crypto = "0.2.36"
mime_guess = "2.0.4"
chrono = "0.4.20"
http = "0.2.8"
tower-http = { version = "0.3.4", features = ["trace"] }
mime = "0.3.0"

[build-dependencies]
ructe = { version = "0.14.2", features = ["mime03"] }

